# TREMA-UNH.github.io

./: README.md  README.mkd  evaluation.html  hakyll.hs  index.html  trema-site.cabal  wikimarks-site.cabal  wikimarks.html
.github/workflows/: ci.yml
content/: index.html  index.mkd  wikimarks.html
content/wikimarks/: code.mkd  dumps.mkd  evaluation.mkd  example.mkd  index-old.mkd  index.mkd  manuscript.mkd  overview.mkd  wikimarks.mkd
css/: default.css
templates/: default.html
wikimarks/: code.html  dumps.html  evaluation.html  example.html  index-old.html  index.html  index.old.html  manuscript.html  overview.html  wikimarks.html
