cabal-version:       3.0
name:                trema-site
version:             0.1.0.0
synopsis:            TREMA site
license:             BSD-3-Clause
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2022 Ben Gamari
build-type:          Simple

executable trema-site
  main-is:             hakyll.hs
  build-depends:       base >=4.13 && <4.16,
                       containers,
                       pandoc >= 2.0,
                       pandoc-citeproc,
                       blaze-html,
                       hakyll >= 4.12
  default-language:    Haskell2010

